committing improvements to xpath 3.1 function implementation for fn:unparsed-text, along with few new related working test cases